--- a/feedback.a7925.css
+++ b/feedback.a7925.css
@@ -1,3 +1,6 @@
+/*!**********************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/css/common.css ***!
+  \**********************************************************************/
 * {
   box-sizing: border-box;
 }
@@ -18,6 +21,9 @@ img {
   max-width: 100%;
 }
 
+/*!***************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/css/03-feedback.css ***!
+  \***************************************************************************/
 .feedback-form {
   display: flex;
   flex-direction: column;
