--- a/gallery.d5b7d.css
+++ b/gallery.d5b7d.css
@@ -1,3 +1,6 @@
+/*!*******************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/css/simple-lightbox.css ***!
+  \*******************************************************************************/
 /*!
 	By André Rinas, www.andrerinas.de
 	Documentation, www.simplelightbox.de
@@ -229,6 +232,9 @@ body.hidden-scroll {
     transform: scale(1.2);
     opacity: 0; } }
 
+/*!**********************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/css/common.css ***!
+  \**********************************************************************/
 * {
   box-sizing: border-box;
 }
@@ -249,6 +255,9 @@ img {
   max-width: 100%;
 }
 
+/*!**************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/css/01-gallery.css ***!
+  \**************************************************************************/
 :root {
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   --animation-duration: 250ms;
