--- a/index.8fab2.css
+++ b/index.8fab2.css
@@ -1,3 +1,6 @@
+/*!**********************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/css/common.css ***!
+  \**********************************************************************/
 * {
   box-sizing: border-box;
 }
